--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "boockstore",
   "version": "0.1.0",
   "private": true,
-  "devDependencies": {
-    "react-scripts": "0.9.0"
-  },
   "dependencies": {
     "axios": "^0.15.3",
     "material-ui": "^0.17.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-tap-event-plugin": "^2.0.1",
+    "redux-thunk": "^2.2.0",
+    "react-redux": "^5.0.3",
+    "react-scripts": "0.9.0",
+    "redux": "^3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
