--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-redux"
   ],
   "description": "Simple bookstore's back-office to practice react with router, one way data flow, MaterialUI and mockap.io as backend.",
-  "homepage": "http://mgdskr.github.io/bookstore",
+  "homepage": "https://mgdskr.github.io/bookstore",
   "dependencies": {
     "axios": "^0.15.3",
     "material-ui": "^0.17.0",
